Hiding not available features
Features currently not  available in the IronSDI camera were hidden by camera feature set. Features not controlled by feature set were hidden manually.

--- a/dct_widgets/connectdialog/connectdialog.ui
+++ b/dct_widgets/connectdialog/connectdialog.ui
@@ -48,6 +48,9 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="tabRS485">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <attribute name="title">
        <string>RS485</string>
       </attribute>
