--- a/dct_widgets/inoutbox/inoutbox.ui
+++ b/dct_widgets/inoutbox/inoutbox.ui
@@ -157,7 +157,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="lblBayerPattern">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="minimumSize">
          <size>
@@ -179,7 +179,7 @@
       <item row="0" column="1">
        <widget class="QComboBox" name="cbxBayerPattern">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="minimumSize">
          <size>
