Fixed Add list of available commands in the debug terminal #48

--- a/dct_widgets/debugterminal/debugterminal.ui
+++ b/dct_widgets/debugterminal/debugterminal.ui
@@ -88,9 +88,16 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btnShowCommands">
+       <property name="text">
+        <string>Commands</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btnShowHelp">
        <property name="text">
-        <string>Show Help</string>
+        <string>Help</string>
        </property>
       </widget>
      </item>
