--- a/application/mainwindow.ui
+++ b/application/mainwindow.ui
@@ -9,9 +9,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>950</width>
+    <width>949</width>
     <height>1015</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>SDI Control Point</string>
@@ -41,7 +47,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>932</width>
+         <width>931</width>
          <height>962</height>
         </rect>
        </property>
