--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -177,5 +177,6 @@
         <file>images/back/dial-back-gray_full.png</file>
         <file>images/back/dial-back-green_full.png</file>
         <file>images/back/dial-back-red_full.png</file>
+        <file>icons/default.png</file>
     </qresource>
 </RCC>
