User settings features implementation
Issue #61

--- a/application/mainwindow.ui
+++ b/application/mainwindow.ui
@@ -76,7 +76,7 @@
            <enum>QTabWidget::Rounded</enum>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <property name="iconSize">
            <size>
@@ -394,7 +394,7 @@
   <action name="actionLoadSettings">
    <property name="icon">
     <iconset resource="../resource/resource.qrc">
-     <normaloff>:/icons/load.png</normaloff>:/icons/load.png</iconset>
+     <normaloff>:/icons/load2.png</normaloff>:/icons/load2.png</iconset>
    </property>
    <property name="text">
     <string>loadSettings</string>
@@ -406,7 +406,7 @@
   <action name="actionSaveSettings">
    <property name="icon">
     <iconset resource="../resource/resource.qrc">
-     <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
+     <normaloff>:/icons/save2.png</normaloff>:/icons/save2.png</iconset>
    </property>
    <property name="text">
     <string>saveSettings</string>
@@ -418,7 +418,7 @@
   <action name="actionSaveToFile">
    <property name="icon">
     <iconset resource="../resource/resource.qrc">
-     <normaloff>:/icons/save2.png</normaloff>:/icons/save2.png</iconset>
+     <normaloff>:/icons/save_to_file.png</normaloff>:/icons/save_to_file.png</iconset>
    </property>
    <property name="text">
     <string>saveToFile</string>
@@ -430,7 +430,7 @@
   <action name="actionLoadFromFile">
    <property name="icon">
     <iconset resource="../resource/resource.qrc">
-     <normaloff>:/icons/load2.png</normaloff>:/icons/load2.png</iconset>
+     <normaloff>:/icons/load_from_file.png</normaloff>:/icons/load_from_file.png</iconset>
    </property>
    <property name="text">
     <string>LoadFromFile</string>
@@ -537,7 +537,7 @@
    </property>
    <property name="icon">
     <iconset resource="../resource/resource.qrc">
-     <normaloff>:/icons/default.png</normaloff>:/icons/default.png</iconset>
+     <normaloff>:/icons/default2.png</normaloff>:/icons/default2.png</iconset>
    </property>
    <property name="text">
     <string>defaultSettings</string>
