--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -178,5 +178,8 @@
         <file>images/back/dial-back-green_full.png</file>
         <file>images/back/dial-back-red_full.png</file>
         <file>icons/default.png</file>
+        <file>icons/save_to_file.png</file>
+        <file>icons/load_from_file.png</file>
+        <file>icons/default2.png</file>
     </qresource>
 </RCC>
