--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -181,5 +181,6 @@
         <file>icons/save_to_file.png</file>
         <file>icons/load_from_file.png</file>
         <file>icons/default2.png</file>
+        <file>images/tab/roi.png</file>
     </qresource>
 </RCC>
